# aromanavigator-demo

./: .env.prod.example  .gitattributes  .gitignore  DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf  nginx.prod.conf  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/apps/activity/: activity_service.py  adapters.py  filters.py  managers.py  models.py  selectors.py  serializers.py  target_payloads.py  urls.py  views.py
backend/apps/articles/: activity.py  article_service.py  filters.py  models.py  selectors.py  serializers.py  tests.py  urls.py  views.py
backend/apps/auth/: auth_services.py  serializers.py  social_auth_service.py  urls.py  views.py
backend/apps/comments/: activity.py  antispam.py  comment_service.py  comment_utils.py  constants.py  models.py  notifications.py  rules.py  selectors.py  serializers.py  urls.py  views.py
backend/apps/exchange/: activity.py  constants.py  create_form_service.py  exchange_service.py  filters.py  managers.py  (+7 more)
backend/configs/: settings.py  urls.py
backend/core/: admin.py  checks.py  consent.py  models.py  pagination.py  profanity_filter.py  site_content_serializers.py  site_content_views.py  storage_backends.py  test_antispam.py  tests.py  urls.py
backend/fragrance_seed/: brands.csv  families.csv  fragrance_perfumers.csv  fragrances.csv  notes.csv  perfumers.csv
backend/templates/: base.html  collage_templates.py  delete_account.html  password_changed.html  recovery.html  register.html
(+892 files in other folders)
