[tool.poetry]
name = "aromanavigator-demo"
version = "0.1.0"
description = "Portfolio demo for Aroma Navigator"
authors = ["Aroma Navigator Demo"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.15"
djangorestframework = "^3.15.2"
mysqlclient = "^2.2.6"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^11.1.0"
uuid = "^1.30"
celery = "^5.4.0"
redis = "^5.2.1"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.7.0"
requests = "^2.32.5"
google-auth = "^2.40.3"
google-auth-oauthlib = "^1.2.2"
django-cors-headers = "^4.9.0"
openpyxl = "^3.1.5"
drf-excel = "^2.5.3"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
